--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
 			<br>
 			國立交通大學傳播與科技學系
 			<br>
+			荷蘭Radboud University 
 			<br>
+			Faculty of Arts交換
+			<br><br><br>
 			Experience
 			<br>
+			APhO  專案助理
 			<br>
 			水越設計       暑期實習生
 			<br>
@@ -68,9 +72,10 @@
             <div class="contact-card"  style="background-image: url('images/graphic1.jpg');">
             <div class="contact-card__inner contact-card__inner--default">
                 <h3 class="h1"><mark>Contact me</mark></h3>
-                <strong class="contact-location-card__headline card__line">Sup</strong>
+                <strong class="contact-location-card__headline card__line"></strong>
                 <p>
-                    <a href="tief2627@gmail.com">gmail</a>
+					<a href="https://twitter.com/tief2627" target="_blank" title="Facebook"><img src="images/Icons-01.png"></a>
+					<a href="https://twitter.com/tief2627" target="_blank" title="Facebook"><img src="images/Icons-01.png"></a>
                     <br>
                     <a href="tel:+886983179835">+Tel</a>
                 </p>
