--- a/illustrate.html
+++ b/illustrate.html
@@ -15,9 +15,10 @@
                 <li><a href="#">Works</a>
 				
 				<ul>
-				<li><a href="multi.html">Multi-media</a></li>
-				<li><a href="graphic.html">Graphic Design</a></li>
-				<li><a href="illustrate.html">Illustration</a></li>
+						<li><a href="illustrate.html">Illustration</a></li>
+						<li><a href="multi.html">Multi-media</a></li>
+						<li><a href="graphic.html">Graphic Design</a></li>
+						<li><a href="project.html">Project</a></li>
 				</ul>
 				</li>
 				
@@ -99,14 +100,6 @@
 
 <div class="box">
 	<div class="imgbox">
-	<img src="images/illu9.png" alt="work2"/>
-	</div>
-	<h3>原創插圖</h3>
-	<p>  </p>
-</div>	
-
-<div class="box">
-	<div class="imgbox">
 	<img src="images/illu10.png" alt="work2"/>
 	</div>
 	<h3>原創插圖</h3>
@@ -121,13 +114,6 @@
 	<p>同人創作</p>
 </div>	
 
-<div class="box">
-	<div class="imgbox">
-	<img src="images/illu12.png" alt="work2"/>
-	</div>
-	<h3>原創插圖</h3>
-	<p>  </p>
-</div>	
 
 <div class="box">
 	<div class="imgbox">
@@ -145,14 +131,7 @@
 	<p>  </p>
 </div>	
 
-<div class="box">
-	<div class="imgbox">
-	<img src="images/illu20.jpg" alt="work2"/>
-	</div>
-	<h3>藝趣節插畫</h3>
-	<p> 幫藝趣節畫的明信片 </p>
 	
-</div>	
 </section>
 
 	<!--footer-->
