--- a/project.HTML
+++ b/project.HTML
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Illustration</title>
-<link href="css/illustration.css" rel="stylesheet" type="text/css">
+<title>Project</title>
+<link href="css/project.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
