--- a/graphic.html
+++ b/graphic.html
@@ -14,10 +14,10 @@
                 <li><a href="#">Works</a>
 				
 				<ul>
+				<li><a href="project.html">Project</a></li>
 				<li><a href="illustrate.html">Illustration</a></li>
 				<li><a href="multi.html">Multi-media</a></li>
 				<li><a href="graphic.html">Graphic Design</a></li>
-				<li><a href="project.html">Project</a></li>
 				</ul>
 				</li>
 				
@@ -38,7 +38,7 @@
 	<h3>Advisor: Hsu, Tzu-Ching</h3>
 	<h1>Letterform <br>GraphiczDesign Book </h1>	
 	<img src="images/book.png" alt="news" width="350" height="350"/>
-	<h4>Got interested?!<br>Called:0983179835</h4>
+	<h4>Got interested?!<br>Call:0983179835</h4>
 	</div>
 	
     <section>
@@ -53,9 +53,7 @@
 		</div>
 		<div class="desbox">
 			<h2>Concept</h2>
-			<p>Composition is the organization or grouping of the different parts of a work
-
-of art so as to achieve a unified whole.
+			<p>Composition is the organization or grouping of the different parts of a work of art so as to achieve a unified whole.<br>
 Although typographic composition utilizes the same basic compositional
 concepts that are part of all visual arts, there are unique ways that typography
 relates to each of these concepts. By forming relationships between the
