--- a/illustrate.html
+++ b/illustrate.html
@@ -15,10 +15,10 @@
                 <li><a href="#">Works</a>
 				
 				<ul>
-						<li><a href="illustrate.html">Illustration</a></li>
-						<li><a href="multi.html">Multi-media</a></li>
-						<li><a href="graphic.html">Graphic Design</a></li>
-						<li><a href="project.html">Project</a></li>
+				<li><a href="project.html">Project</a></li>
+				<li><a href="illustrate.html">Illustration</a></li>
+				<li><a href="multi.html">Multi-media</a></li>
+				<li><a href="graphic.html">Graphic Design</a></li>
 				</ul>
 				</li>
 				
@@ -69,7 +69,7 @@
 	<img src="images/illu1.png" alt="work2"/>
 	</div>
 	<h3>夏夜</h3>
-	<p> 插圖 </p>
+	<p> 原創插圖 </p>
 	
 </div>
 	
@@ -123,13 +123,6 @@
 	<p>  </p>
 </div>	
 
-<div class="box">
-	<div class="imgbox">
-	<img src="images/illu19.jpg" alt="work2"/>
-	</div>
-	<h3>自由創作</h3>
-	<p>  </p>
-</div>	
 
 	
 </section>
