--- a/multi.html
+++ b/multi.html
@@ -16,10 +16,10 @@
 				<li><a href="#">Works</a>
 
 					<ul>
+							<li><a href="project.html">Project</a></li>
 							<li><a href="illustrate.html">Illustration</a></li>
 							<li><a href="multi.html">Multi-media</a></li>
 							<li><a href="graphic.html">Graphic Design</a></li>
-							<li><a href="project.html">Project</a></li>
 					</ul>
 				</li>
 
@@ -68,8 +68,7 @@
 
 		<div class="introbox">
 			<h1>動畫作品</h1>
-			<p>動畫作品內容涵蓋為台灣義築協會粉絲專頁所製作的內容小動畫，同時也有自己在課餘時間製作出的同人動畫。大部分使用的軟體為Animate，是一款結合了傳統的HTML、Action Script與Java
-				Script的軟體，操作起來十分費時，用完會看起來像我現在這樣語無倫次。</p>
+			<p>動畫作品內容涵蓋為台灣義築協會粉絲專頁所製作的內容小動畫，同時也有自己在課餘時間製作出的同人動畫。大部分使用的軟體為Adobe Animate。</p>
 
 		</div>
 
