--- a/illustrate.html
+++ b/illustrate.html
@@ -15,10 +15,11 @@
                 <li><a href="#">Works</a>
 				
 				<ul>
-				<li><a href="project.html">Project</a></li>
-				<li><a href="illustrate.html">Illustration</a></li>
-				<li><a href="multi.html">Multi-media</a></li>
-				<li><a href="graphic.html">Graphic Design</a></li>
+						<li><a href="project.html">Project</a></li>
+						<li><a href="illustrate.html">Illustration</a></li>
+						<li><a href="multi.html">Multi-media</a></li>
+						<li><a href="graphic.html">Graphic Design</a></li>
+						<li><a href="journalism.html">Journalism</a></li>
 				</ul>
 				</li>
 				
@@ -38,7 +39,7 @@
 	
 <div class="box">
 	<div class="imgbox">
-		<a href="https://reurl.cc/ZjmZGA"><img src="images/illu3.png" alt="work2"/></a>
+		<a href="https://reurl.cc/ZjmZGA"target="_blank"><img src="images/illu3.png" alt="work2"/></a>
 	</div>
 	<h3>Citytale</h3>
 	<p> 水越設計實習時執行專案 </p>
@@ -57,7 +58,7 @@
 
 <div class="box">
 	<div class="imgbox">
-		<a href="https://tief2627.github.io/RUNNINGMOONMAN/"><img src="images/illu5.png" alt="work2"/></a>
+		<a href="https://tief2627.github.io/RUNNINGMOONMAN/"target="_blank"><img src="images/illu5.png" alt="work2"/></a>
 	</div>
 	<h3>跑跑月老</h3>
 	<p>資訊型網頁</p>
