--- a/multi.html
+++ b/multi.html
@@ -20,6 +20,7 @@
 							<li><a href="illustrate.html">Illustration</a></li>
 							<li><a href="multi.html">Multi-media</a></li>
 							<li><a href="graphic.html">Graphic Design</a></li>
+							<li><a href="journalism.html">Journalism</a></li>
 					</ul>
 				</li>
 
