--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 						<li><a href="illustrate.html">Illustration</a></li>
 						<li><a href="multi.html">Multi-media</a></li>
 						<li><a href="graphic.html">Graphic Design</a></li>
+						<li><a href="journalism.html">Journalism</a></li>
 				</ul>
 				</li>
 				
@@ -90,12 +91,6 @@
      <div class="banner2">
 	</div>
 
-     <footer class="container">
-    <div class="row justify-content-between align-items-center">
-        <div class="col-auto">
-        </div>
-    </div>
-		 
-</footer>
+    
 </body>
 </html>
