--- a/project.HTML
+++ b/project.HTML
@@ -42,7 +42,7 @@
 		<a href="https://reurl.cc/ZjmZGA"target="_blank"><img src="images/pro2.jpeg" alt="work2"/></a>
 	</div>
 	<h3>Citytale</h3>
-	<p> 擔任水越設計實習生期間參與的專案。以圖文方式帶領大眾以不同角度觀看台灣在地與世界各國的節慶、民俗文化。 </p>
+	<p> 擔任水越設計實習生期間參與的專案。以粉專圖文方式帶領大眾以不同角度觀看台灣在地與世界各國的節慶、民俗文化。 </p>
 	
 </div>
 	
