--- a/project.HTML
+++ b/project.HTML
@@ -66,7 +66,7 @@
 	</div>
 	<h3>龜吼漁港親海環境規劃案</h3>
 	<p> 擔任水越設計實習生期間參與的專案。主要參與部分為前中期田調、基地背景分析。前期透過基地背景資料蒐集分析，中前期進行使用者調查、現況場勘、國內外案例分析擬出龜吼發展方向，
-		整合歸納提出未來願景。</p>
+		並整合歸納提出未來願景。</p>
 	
 </div>
 	
