--- a/project.html
+++ b/project.html
@@ -53,8 +53,7 @@
 	<h3>【台灣義築協會】峨眉茶展示空間</h3>
 	<p> 台灣藝築協會與交大師生及峨眉鄉的無負擔農場合作，以輕構築手法搭建的茶展示中心。空間設計的發想源自峨眉鄉的在地元素，利用木造斜撐結構搭起展示空間，並
 			以兩部分的天花板設計做區隔，前緣為採用六角編法的竹編單元「大樹下」，
-			光線從竹條間隙透出，與陰影共同營造層次感，讓人彷彿身處在大樹下。後端
-			為稻草與茅草穿插編織而成的懸吊垂簾「茶園裡」，以波浪狀的排列方式搭配冷暖色的燈光，呈現質樸的峨眉茶園意象。 </p>
+			光線從竹條間隙透出，與陰影共同營造層次感，讓人彷彿身處在大樹下。後端為稻草與茅草穿插編織而成的懸吊垂簾「茶園裡」，以波浪狀的排列方式搭配冷暖色的燈光，呈現質樸的峨眉茶園意象。 </p>
 	
 </div>
 
@@ -66,7 +65,7 @@
 	</div>
 	<h3>龜吼漁港親海環境規劃案</h3>
 	<p> 擔任水越設計實習生期間參與的專案。主要參與部分為前中期田調、基地背景分析。前期透過基地背景資料蒐集分析，中前期進行使用者調查、現況場勘、國內外案例分析擬出龜吼發展方向，
-		並整合歸納提出未來願景。</p>
+		並加以整合提出未來願景。</p>
 	
 </div>
 	
